# agent-net

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  docker-compose.yml  docker.mk  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agent-side/agents/: Dockerfile  collaborative_agent_base.py
agent-side/agents/credit-risk-analyst/: run.py
agent-side/agents/echo/: run.py
agent-side/agents/supply-chain-expert/: run.py
agent-side/bridge/: README.md  agent_bridge.py  pyproject.toml
agent-side/sdk/: pyproject.toml  pytest.ini
agent-side/sdk/src/agent_internet/: __init__.py  agent.py  collaboration.py  discovery.py  http_client.py  message.py  paths.py  registry.py  runtime.py
agent-side/sdk/src/agent_internet/cli/: __init__.py
agent-side/sdk/src/agent_internet/models/: __init__.py  adl.py  protocol.py
agent-side/sdk/src/agent_internet/tests/: __init__.py  test_agent.py  test_collaboration.py  test_message.py  test_registry.py  test_smoke.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
dashboard/src/api/: client.js
dashboard/src/components/: AgentCard.jsx  Layout.jsx  StatusBadge.jsx
dashboard/src/pages/: AgentDetail.jsx  AgentSquare.jsx  Login.jsx  MyReviews.jsx  NetworkFeed.jsx  SdkGuide.jsx  TaskTracker.jsx
dashboard/src/pages/admin/: AgentApproval.jsx  Moderation.jsx  Overview.jsx  Revenue.jsx
platform/backend/: Dockerfile  pyproject.toml
platform/backend/src/platform/: __init__.py  auth.py  config.py  constants.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
platform/backend/src/platform/api/: admin.py  agents.py  billing.py  discovery.py  reviews.py  sessions.py  tasks.py  users.py
platform/backend/src/platform/core/: billing.py  discovery.py  embeddings.py  messaging.py  session_manager.py
platform/backend/src/platform/core/session/: __init__.py  context.py  forwarder.py  nesting.py  state_machine.py
platform/backend/src/platform/middleware/: audit.py
platform/backend/src/platform/repository/: __init__.py  agent_repo.py  session_repo.py
platform/backend/tests/: test_auth.py  test_billing.py  test_discovery.py  test_embeddings.py  test_rate_limiter.py  test_session_manager.py
platform/database/: schema.sql
platform/database/migrations/: 001_fix_domains_index.sql
platform/scripts/: api_test.py  seed_demo_agents.py  start_all.sh  test_async_forward.py  test_e2e.py  test_negotiation.py
shared/: pyproject.toml
shared/agent_internet_protocol/: __init__.py  adl.py  builders.py  protocol.py
