[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-internet-protocol"
version = "0.1.0"
description = "Shared ADL and AIP protocol models for Agent Internet"
readme = { text = "Shared ADL and AIP protocol models for Agent Internet.", content-type = "text/plain" }
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Internet contributors" }]
keywords = ["agents", "protocol", "collaboration", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/agent-internet/agent-internet"
Repository = "https://github.com/agent-internet/agent-internet"
Issues = "https://github.com/agent-internet/agent-internet/issues"

[tool.setuptools.packages.find]
where = ["."]
